# fastapi-ecommerce

./: .gitignore  Dockerfile  Procfile  README.md  app.py  default.db  init_db.py  main.py  newspaper.json  pyproject.toml  requirements.txt  sql_app (copy).db  sql_app.db  task-definition.json  task-definition_backup.json
.ebextensions/: 01_fastapi.config
.github/workflows/: aws.yml
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_cart.py  test_main.py
