[tool.poetry]
name = "fastapi-ecommerce"
version = "0.1.0"
description = "a backend for my ecommerce site"
authors = ["sunpochin"]
readme = "README.md"
packages = [{include = "sql_app"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
SQLAlchemy = "^1.4.41"
pytest = "^7.1.3"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"
fastapi = "^0.85.0"
PyMySQL = "^1.0.2"

[tool.poetry.scripts]
start = "sql_app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
